Adds sample feature and step definition